[tool.poetry]
name = "merge-queue-experiments"
version = "0.0.0"
description = "Merge Queues!"
authors = ["BDC"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "src.main:say_hello"
