[tool.poetry]
name = "merge-queue-experiments"
version = "0.0.0"
description = "Merge Queues!"
authors = ["BDC"]
readme = "README.md"
packages = [
    { include = "src" },
    { include = "scripts" }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hello = "src.main:say_hello"
goodbye = "src.main:say_goodbye"
check-release-gate = "scripts.ci:check_release_gate"


